Fix Bug 445434: Gwenview crash when clicking "crop" button

BUG: 445434